--- a/table.html
+++ b/table.html
@@ -1,150 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TABLE</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>table</title>
 </head>
 <body>
-	<table border="" cellspacing="0">
-	  <tr>
-	  	<thead>
-	  		<th>S.NO</th>
-	  		<th>NAME</th>
-	  		<th>ROLLNO</th>
-	  		<th>BRANCH</th>
-	  		<th>CAMPUS</th>
-	  	</thead>
-	  </tr>
-	  <tbody>
-	  	<tr>
-	  		<td>
-	  			1.
-	  		</td>
-	  		<td>K.varshini</td>
-	  	    <td>21MH1A05A4</td>
-	  	    <td>CSE</td>
-	  	    <td>ACOE</td>
-	  	</tr>
-	  	<tr>
-	  		<td>
-	  			2.
-	  		</td>
-	  		<td>T.triveni</td>
-	  	    <td>21MH1A0561</td>
-	  	    <td>CSE</td>
-	  	    <td>ACOE</td>
-	  	</tr>
-	  	<tr>
-	  		<td>
-	  			3.
-	  		</td>
-	  		<td>S.yamini</td>
-	  	    <td>21MH1A05C5</td>
-	  	    <td>CSE</td>
-	  	    <td>ACOE</td>
-	  	</tr>
-	  	<tr>
-	  		<td>
-	  			4.
-	  		</td>
-	  		<td>M.satya</td>
-	  	    <td>21MH1A05B0</td>
-	  	    <td>CSE</td>
-	  	    <td>ACOE</td>
-	  	</tr>
-	  	<tr>
-	  		<td>
-	  			5.
-	  		</td>
-	  		<td>A.swapna</td>
-	  	    <td>21MH1A0573</td>
-	  	    <td>CSE</td>
-	  	    <td>ACOE</td>
-	  	</tr>
-	  </tbody>
-	 
-	</table><br>
-
-<table border="">
-	<thead>
-		<th >yyyy</th>
-		<th>yyy</th>
-		<th>ffff</th>
-		<th colspan="2">zzzzz</th>
-		<th>vvvv</th>
-	</thead>
-	<tbody>
-		<tr rowspan="2" >
-         <td>xxxx</td>
-         <td>yyyy</td>
-         <td>zzzz</td>
-         <td>pppp</td>
-         <td>qqqqq</td>
-         <td>rrrrr</td>
-		</tr>
-		<tr>
-			<td rowspan="3">xxx</td>
-			<td rowspan="2">yyy</td>
-			<td>yyyy</td>
-			<td rowspan="3">sjsk</td>
-			<td rowspan="3">sjs</td>
-			<td rowspan="2">sjj</td>
-		</tr>
-		<tr>
-			<td>aaaa</td>
-			
-			
-			
-			
-		</tr>
-		<tr>
-			<td colspan="2" align="center">bbbbb</td>
-			<td>bbbbb</td>
-			
-			
-			
-		</tr>
-		<tr>
-			<td>cccc</td>
-			<td>ccccc</td>
-			<td>ccccc</td>
-			<td>ccccc</td>
-			<td>ccccc</td>
-			<td>cccc</td>
-		</tr>
-		<tr>
-			<td>ddddd
-			</td>
-			<td >dddd</td>
-			<td>dddd</td>
-			<td>dddd</td>
-			<td colspan="2">dddd</td>
-			
-		</tr>
-	</tbody>
-</table>
-<br>
-<table border="1" >
-	<thead>
-		<tr>
-		<th colspan="2">LANGUAGES AND FRAMEWORKS</th>
-		
-	</tr>
-	<tr>
-		<td>Python</td>
-		<td>Django</td>
-	</tr>
-	<tr >
-     <td rowspan="2">Javascript</td>
-     <td>React.js</td>
-	</tr>
-	<tr>
-		<td>Vue.js</td>
-	</tr>
-	<tr>
-		<td>Ruby</td>
-		<td>Ruby on rails</td>
-	</tr>
-	</thead>
-	</table>
+	<center>
+   <table border="1" cellspacing="1">
+   	
+   	  <tbody>
+   	  	<tr>
+   	  		<td rowspan="11"> TCB</td>
+   	  		<td>Order no:</td>
+   	  		<td colspan="3">#ABC001</td>
+   	  	</tr>
+   	  	<tr>
+   	  		
+   	  		<td>Order Date:</td>
+   	  		<td colspan="3">23-Mar-2016</td>
+   	  	</tr>
+   	  	<tr>
+   	  		<td colspan="4" align="center">Customer</td>
+   	  	</tr>
+         <tr>
+         	<td>Name:</td>
+         	<td colspan="3">John Papas</td>
+         </tr>
+         <tr>
+         	<td>Address:</td>
+         	<td colspan="3">Independence Day 5th str,11511</td>
+         </tr>
+         <tr>
+         	<td colspan="4" align="center">order details</td>
+         </tr>
+         <tr>
+         	<td>1</td>
+         	<td>Of Mice and Men</td>
+         	<td>Book</td>
+         	<td>10.00$</td>
+         </tr>
+         <tr>
+         	<td>2</td>
+         	<td>Les Miserables</td>
+         	<td>Book</td>
+         	<td>12.00$</td>
+         </tr>
+         <tr>
+         	<td>3</td>
+         	<td>Game of Thrones - S01</td>
+         	<td>DVD</td>
+         	<td>50.00$</td>
+         </tr>
+         <tr>
+         	<td>4</td>
+         	<td>Samsung Galaxy</td>
+         	<td>Mobile Phone</td>
+         	<td>200.00$</td>
+         </tr>
+         <tr>
+         	<td colspan="3" align="right">total</td>
+         	<td>272.00$</td>
+         </tr>
+   	  </tbody>
+   </table>
+</center>
 </body>
 </html>
